@@ -1,33 +1,53 @@
 plugins {
     id 'application'
-    id 'airbyte-java-connector'
+    id 'airbyte-bulk-connector'
 }
 
-airbyteJavaConnector {
-    cdkVersionRequired = '0.2.0'
-    features = ['db-destinations']
-    useLocalCdk = false
+airbyteBulkConnector {
+    core = 'load'
+    toolkits = ['load-object-storage', 'load-azure-blob-storage']
+    cdk = 'local'
 }
-
-//remove once upgrading the CDK version to 0.4.x or later
-java {
-    compileJava {
-        options.compilerArgs.remove("-Werror")
-    }
-}
-
-airbyteJavaConnector.addCdkDependencies()
 
 application {
-    mainClass = 'io.airbyte.integrations.destination.azure_blob_storage.AzureBlobStorageDestination'
-    applicationDefaultJvmArgs = ['-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0']
+    mainClass = 'io.airbyte.integrations.destination.azure_blob_storage.AzureBlobStorageDestinationKt'
+
+    applicationDefaultJvmArgs = [
+            '-XX:+ExitOnOutOfMemoryError', '-XX:MaxRAMPercentage=75.0',
+//            Uncomment to run locally:
+//          '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+//            Uncomment to enable remote profiling:
+//            '-XX:NativeMemoryTracking=detail',
+//            '-Djava.rmi.server.hostname=localhost',
+//            '-Dcom.sun.management.jmxremote=true',
+//            '-Dcom.sun.management.jmxremote.port=6000',
+//            '-Dcom.sun.management.jmxremote.rmi.port=6000',
+//            '-Dcom.sun.management.jmxremote.local.only=false',
+//            '-Dcom.sun.management.jmxremote.authenticate=false',
+//            '-Dcom.sun.management.jmxremote.ssl=false'
+    ]
 }
 
+// Uncomment to run locally
+//run {
+//    standardInput = System.in
+//}
+
+// Exclude conflicting log4j-over-slf4j dependency
+configurations.all {
+        exclude group: "org.slf4j", module: "slf4j-reload4j"
+}
+
+// TODO figure out if we need these
+// dependencies {
+
+//     implementation 'com.azure:azure-storage-blob:12.20.2'
+//     implementation 'org.apache.commons:commons-csv:1.4'
+
+//     testImplementation 'org.apache.commons:commons-lang3:3.11'
+//     testImplementation "org.testcontainers:junit-jupiter:1.17.5"
+// }
+
 dependencies {
-
-    implementation 'com.azure:azure-storage-blob:12.20.2'
-    implementation 'org.apache.commons:commons-csv:1.4'
-
-    testImplementation 'org.apache.commons:commons-lang3:3.11'
-    testImplementation "org.testcontainers:junit-jupiter:1.17.5"
+    integrationTestImplementation 'org.testcontainers:azure:1.20.6'
 }
